thankyou.html modified

--- a/Term_Project/Term_Project/Thankyou.html
+++ b/Term_Project/Term_Project/Thankyou.html
@@ -6,12 +6,10 @@
     <title>Thank You</title>
 
     <!-- CSS Section -->
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />  
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!------ Include the above in your HEAD tag ---------->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="Content/bootstrap.css" rel="stylesheet" />
+    <link href="Content/css/bootstrap-grid.css" rel="stylesheet" />
+    <link href="Content/css/bootstrap-grid.min.css" rel="stylesheet" />
+    <link href="Content/css/bootstrap-theme.min.css" rel="stylesheet" />
 
 </head>
 <body>   
